fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -493,9 +493,9 @@ body {
         font-size: 20px;
         width: 40%;
         height: auto;
-        margin-top: 12%;
+        margin-top: 8%;
         text-align: center;
-        margin-right: -24%;
+        margin-right: 0%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -546,8 +546,8 @@ body {
         height: auto;
         text-align: center;
         font-size: 20px;
-        margin-top: 12%;
-        margin-right: -27%;
+        margin-top: 8%;
+        margin-right: 0%;
     }
 }
 @media screen and (min-width: 481px) {
